full-moon/tests/cfxlua_cases/fail/parser/division_assignment_operator/source.lua
local num = 10
num/=